--- a/import_page.html
+++ b/import_page.html
@@ -13,32 +13,70 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-md py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i class="fas fa-laptop-medical"></i></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Request</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Validation Tables</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Import</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                    </li>
-                </ul>
+    <div id="page-container">
+        <div id="page-wrap">
+            <nav class="navbar navbar-light navbar-expand-md py-3">
+                <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i class="fas fa-laptop-medical"></i></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="admin_page.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="request_page.html">Request</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Validation Tables</a></li>
+                            <li class="nav-item"><a class="nav-link" href="add_page.html">Add&nbsp;</a></li>
+                            <li class="nav-item"><a class="nav-link" href="import_page.html">Import</a></li>
+                        </ul><button class="btn btn-primary my-button" type="button">Logout</button>
+                    </div>
+                </div>
+            </nav>
+            <div class="container">
+                <div class="row my-5">
+                    <div class="col-md-4 offset-xl-1 page-title" style="position: relative; left: 300px;">
+                        <h1 class="text-center" style="/*align-self: center;*/">Import Data</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="container my-container" style="width: 70%;">
+                <form>
+                    <div class="row">
+                        <div class="col-xl-12 col-xxl-12 offset-md-2 offset-xl-0" style="margin-right: 22px;padding-left: 0px;">
+                            <p class="mx-2 mb-0">File Browser:</p><input class="form-control mx-1" type="file">
+                        </div>
+                        <div class="w-100"></div>
+                        <div class="w-100"></div>
+                        <div class="w-100"></div>
+                        <div class="w-100"></div>
+                        <div class="w-100"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6">
+                            <div class="my-flex mt-3" style="/*justify-content: start;*/align-items: center;gap: 10px;">
+                                <p class="mb-0">Category :</p>
+                                <div class="dropdown"><button class="btn btn-primary dropdown-toggle close-button" aria-expanded="false" data-bs-toggle="dropdown" type="button">Category</button>
+                                    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="my-flex mt-3" style="justify-content: start;align-items: center;gap: 10px;">
+                                <p class="mb-0">Subcategory:</p>
+                                <div class="dropdown"><button class="btn btn-primary dropdown-toggle close-button" aria-expanded="false" data-bs-toggle="dropdown" type="button">Subcategory</button>
+                                    <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col">
+                            <div class="btn-group float-end mb-2 mx-3" role="group"><button class="btn btn-primary mx-2 close-button" type="button">Cancel</button><button class="btn btn-primary my-button" type="button">Request</button></div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-    </nav>
-    <footer class="text-center" style="background-color: var(--bs-gray-900);"><div class="container-fluid my-footer py-4" style="position: absolute;bottom: 0;/*right: 0;*//*left: 0;*//*right: 50px;*/">
+        <footer class="text-center my-footer"><div class="container-fluid py-4">
     <p class="mb-0">Copyright © 2022 BioCat</p>
     <p class="mb-0">Temple University</p>
 </div></footer>
-    <div class="container">
-        <div class="row my-5">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 page-title">
-                <h1 class="text-center" style="/*align-self: center;*/">Import Data</h1>
-            </div>
-            <div class="col-md-4"></div>
-        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
