--- a/request_page_user.html
+++ b/request_page_user.html
@@ -9,117 +9,112 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/card.compiled.css">
-    <link rel="stylesheet" href="assets/css/cart.compiled.css">
-    <link rel="stylesheet" href="assets/css/Icon-Centered-Between-Lines.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/partials/footer.compiled.css">
-    <link rel="stylesheet" href="assets/css/partials/header.compiled.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-md py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5v-1zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5v-1zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-2"><span class="navbar-text">Hello User!</span>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Request</a></li>
-                    <li class="nav-item"></li>
-                </ul>
+    <div id="page-container">
+        <div id="page-wrap">
+            <nav class="navbar navbar-light navbar-expand-md py-3">
+                <div class="container"><a class="navbar-brand d-flex align-items-center" href="admin_homepage.html"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i class="fas fa-laptop-medical"></i></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navcol-2"><span class="navbar-text">Hello User!</span>
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="category_page.html">Search</a></li>
+                            <li class="nav-item"><a class="nav-link" href="request_page_user.html">Request</a></li>
+                            <li class="nav-item"></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="container">
+                <div class="row my-5">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4 page-title">
+                        <h1 class="text-center" style="/*align-self: center;*/">Request History</h1>
+                    </div>
+                    <div class="col-md-4"></div>
+                </div>
+            </div>
+            <div class="container my-container">
+                <div class="table-responsive text-bg-light" style="padding-bottom: 0px;margin-bottom: 0px;margin-top: 0px;">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Requestee First Name</th>
+                                <th>Requestee Last Name</th>
+                                <th>Request Date</th>
+                                <th>Summary</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Eleni</td>
+                                <td>Annie</td>
+                                <td>11/01/22</td>
+                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td>Complete</td>
+                            </tr>
+                            <tr>
+                                <td>Suman</td>
+                                <td>Batish</td>
+                                <td>11/02/22</td>
+                                <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td>In Progress</td>
+                            </tr>
+                            <tr>
+                                <td>Eleni</td>
+                                <td>Annie</td>
+                                <td>11/03/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td>In Progress</td>
+                            </tr>
+                            <tr>
+                                <td>Suman</td>
+                                <td>Batish</td>
+                                <td>11/04/22</td>
+                                <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td>Complete</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <nav class="d-flex m-auto" style="width: 240px;">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#">5</a></li>
+                        <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Summary</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <hr style="margin-top: 0px;margin-bottom: 8px;">
+                            <p style="margin-bottom: 8px;">Requestee: Weidong Yang<br>Request Date: 10/25/2022<br>Status: Complete&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
+                            <ul style="margin-bottom: 0px;">
+                                <li>Plankton-Zooplankton wm Mount: Cross Quantity: 10<br></li>
+                                <li>Fungus - Zygorhynchus moelleri zygotes Mount: Cross&nbsp;<br>Quantity: 10<br></li>
+                            </ul>
+                            <hr style="margin-top: 8px;margin-bottom: 0px;">
+                        </div>
+                        <div class="modal-footer"><button class="btn btn-primary" type="button" style="background: var(--bs-black);" data-dimiss="modal">Close</button></div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
-    <footer class="text-center" style="background-color: var(--bs-gray-900);"><div class="container-fluid my-footer py-4" style="position: absolute;bottom: 0;/*right: 0;*//*left: 0;*//*right: 50px;*/">
+        <footer class="text-center" style="background-color: var(--bs-gray-900);"><div class="container-fluid my-footer py-4" style="position: absolute;bottom: 0;/*right: 0;*//*left: 0;*//*right: 50px;*/">
     <p class="mb-0">Copyright © 2022 BioCat</p>
     <p class="mb-0">Temple University</p>
 </div></footer>
-    <div class="container">
-        <div class="row my-5">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 page-title">
-                <h1 class="text-center" style="/*align-self: center;*/">Request History</h1>
-            </div>
-            <div class="col-md-4"></div>
-        </div>
-    </div>
-    <div class="container" style="padding-left: 2px;padding-right: 2px;margin-top: -42px;padding-top: 0px;border-style: solid;border-color: var(--bs-black);margin-bottom: 0px;padding-bottom: 0px;">
-        <div class="table-responsive text-bg-light" style="padding-bottom: 0px;margin-bottom: 0px;margin-top: 0px;">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Requestee First Name</th>
-                        <th>Requestee Last Name</th>
-                        <th>Request Date</th>
-                        <th>Summary</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Eleni</td>
-                        <td>Annie</td>
-                        <td>11/01/22</td>
-                        <td><button class="btn" type="button" data-toggle="modal" data-target="summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td>Complete</td>
-                    </tr>
-                    <tr>
-                        <td>Suman</td>
-                        <td>Batish</td>
-                        <td>11/02/22</td>
-                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td>In Progress</td>
-                    </tr>
-                    <tr>
-                        <td>Eleni</td>
-                        <td>Annie</td>
-                        <td>11/03/22</td>
-                        <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td>In Progress</td>
-                    </tr>
-                    <tr>
-                        <td>Suman</td>
-                        <td>Batish</td>
-                        <td>11/04/22</td>
-                        <td><button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                        <td>Complete</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <nav class="d-flex m-auto" style="width: 240px;">
-            <ul class="pagination">
-                <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">4</a></li>
-                <li class="page-item"><a class="page-link" href="#">5</a></li>
-                <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Summary</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <hr style="margin-top: 0px;margin-bottom: 8px;">
-                    <p style="margin-bottom: 8px;">Requestee: Weidong Yang<br>Request Date: 10/25/2022<br>Status: Complete&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Summary List:<br></p>
-                    <ul style="margin-bottom: 0px;">
-                        <li>Plankton-Zooplankton wm Mount: Cross Quantity: 10<br></li>
-                        <li>Fungus - Zygorhynchus moelleri zygotes Mount: Cross&nbsp;<br>Quantity: 10<br></li>
-                    </ul>
-                    <hr style="margin-top: 8px;margin-bottom: 0px;">
-                </div>
-                <div class="modal-footer"><button class="btn btn-primary" type="button" style="background: var(--bs-black);">Close</button></div>
-            </div>
-        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
